bynkc/tests/fixtures/negative/373_recursive_generic_at_boundary/input.bynk
commons bad

-- v0.172 (#592): a generic-record instantiation may cross a boundary through
-- its monomorphised codec — but a *recursive* generic record (one that
-- transitively contains itself, here through the `Option[Node[T]]` field) has
-- no finite set of codecs, so it is rejected at the boundary.
type Node[T] = {
  value: T,
  next: Option[Node[T]],
}

type Holder = {
  head: Node[Int],
}
